package com.example.CofradeDome.Models

class DatosTarjetasCofrades(var id: Int, var nombrecompleto: String)
